--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "my-app",
+  "name": "development",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^1.0.0",
+    "homepage": "https://matsuim.github.io/development",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14"
   },
   "scripts": {
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
